Change max size for nginx. Move card tab to avoid overlap

--- a/app/assets/stylesheets/application/cards.css.scss
+++ b/app/assets/stylesheets/application/cards.css.scss
@@ -69,7 +69,7 @@ body#cards {
   #title {
     position: absolute;
     top: 0;
-    left: 240px;
+    left: 264px;
     height: 15px;
     /*	width: 200px;	*/
     border-bottom: 1px solid white;
